[package]
name = "lemmy-client"
version = "0.19.3"
edition = "2021"
license = "AGPL-3.0"
authors = ["SleeplessOne1917"]
description = "A Rust HTTP client for Lemmy."
homepage = "https://join-lemmy.org"
repository = "https://github.com/SleeplessOne1917/lemmy-client-rs"
keywords = ["Lemmy", "HTTP-client", "API-wrapper", "fediverse"]
categories = ["api-bindings", "wasm"]

[dependencies]
lemmy_api_common = { version="=0.19.3" }
http = "1.1.0"
thiserror = "1.0.61"
leptos = { version="0.6.12", default-features=false, optional=true }
serde = "1.0.203"

[features]
default = []
leptos = ["web-sys/AbortController", "dep:leptos"]

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-net = { version = "0.5", features = ["http"] }
serde_urlencoded = "0.7"
web-sys = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version="0.12.4", default-features=false, features=["default-tls", "json", "http2"] }
